--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,7 @@ Flask==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
-python-engineio==3.9.3
-python-socketio==4.3.1
 six==1.12.0
 websockets==8.0.2
 Werkzeug==0.16.0
+RPi.GPIO==0.7.0
